--- a/Transformaciones_Graficas/Transformaciones_Graficas.csproj
+++ b/Transformaciones_Graficas/Transformaciones_Graficas.csproj
@@ -49,13 +49,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Figura.cs" />
+    <Compile Include="ClasesDibujo\Elipse.cs" />
+    <Compile Include="ClasesDibujo\Figura.cs" />
+    <Compile Include="ClasesDibujo\Rectangulo.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="ClasesDibujo\Poligono.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
@@ -109,5 +112,6 @@
   <ItemGroup>
     <None Include="Resources\play_arrow.png" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
