--- a/Transformaciones_Graficas/Transformaciones_Graficas.csproj
+++ b/Transformaciones_Graficas/Transformaciones_Graficas.csproj
@@ -36,6 +36,8 @@
     <Reference Include="FontAwesome.Sharp, Version=5.15.3.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\FontAwesome.Sharp.5.15.3\lib\net48\FontAwesome.Sharp.dll</HintPath>
     </Reference>
+    <Reference Include="PresentationCore" />
+    <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -47,9 +49,10 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CButton.cs">
+    <Compile Include="CustomControls\CButton.cs">
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="ClasesDibujo\Dibujado.cs" />
@@ -66,6 +69,9 @@
     <Compile Include="ListaFiguras.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="CustomControls\CButton.resx">
+      <DependentUpon>CButton.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -117,6 +123,5 @@
   <ItemGroup>
     <None Include="Resources\play_arrow.png" />
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
