--- a/Transformaciones_Graficas/Transformaciones_Graficas.csproj
+++ b/Transformaciones_Graficas/Transformaciones_Graficas.csproj
@@ -134,5 +134,8 @@
   <ItemGroup>
     <None Include="Resources\format_shapes.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\people.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
